--- a/challenges/index.html
+++ b/challenges/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script src="./functions.js" type="module" />
+    <script src="./objects.js" type="module" />
 </body>
 
 </html>
